# dockerfile-doctor

./: .dockerfile-doctor.yaml  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pr_tracker.json  pyproject.toml
.github/workflows/: ci.yml
demo/: Dockerfile.bad  generate_demo.py  index.html
scripts/: check_prs.py  validate_pr.sh
src/dockerfile_doctor/: __init__.py  __main__.py  cli.py  config.py  diff.py  fixer.py  models.py  parser.py  reporter.py  rules.py  score.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_coverage_boost.py  test_coverage_final.py  test_diff.py  test_fixer.py  test_fixer_edge.py  test_fixer_new.py  test_integration_expanded.py  test_integrity.py  test_meta_consistency.py  test_parser.py  test_reporter.py  test_rules.py  test_rules_edge_perf.py  test_rules_edge_pkg.py  test_rules_edge_security.py  test_rules_expanded.py  test_score.py
tests/dockerfiles/: bad_maintainability.Dockerfile  bad_performance.Dockerfile  bad_security.Dockerfile  good.Dockerfile  multistage.Dockerfile  node_app.Dockerfile  python_app.Dockerfile
